--- a/Untitled.ipynb
+++ b/Untitled.ipynb
@@ -2,18 +2,9 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[ 77. 255.]\n",
-      "327.35454785293575\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# import the necessary packages\n",
     "import numpy as np\n",
@@ -29,10 +20,6 @@
     "    rect[3] = (198,470)   # x is less and y is more than rect[1]\n",
     "\n",
     "    # return the ordered coordinates\n",
-    "    print(rect[0])\n",
-    "    \n",
-    "    width = np.sqrt(((rect[0][0]-rect[1][0]) ** 2)+((rect[0][1]-rect[1][1]) ** 2))\n",
-    "    print(width)\n",
     "    return rect\n"
    ]
   },
@@ -46,8 +33,11 @@
     "import cv2\n",
     "\n",
     "def get_dimensions(pts):\n",
-    "    rect = get_vertices_in_order(pts)\n",
-    "    (tl, tr, br, bl) = rect\n",
+    "    #rect = get_vertices_in_order(pts)\n",
+    "    \n",
+    "    #replace pts with rect if ordering of points is required\n",
+    "    (tl, tr, br, bl) = pts \n",
+    "    \n",
     "    #distance between two points is root((x1-x2^2) + (y1-y2^2))\n",
     "    \n",
     "    widthA = np.sqrt(((br[0] - bl[0]) ** 2) + ((br[1] - bl[1]) ** 2))\n",
@@ -73,7 +63,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -100,7 +90,9 @@
       "\n",
       "       [[382, 119]],\n",
       "\n",
-      "       [[381, 118]]], dtype=int32)]\n"
+      "       [[381, 118]]], dtype=int32)]\n",
+      "1\n",
+      "2\n"
      ]
     }
    ],
@@ -108,6 +100,7 @@
     "import numpy as np\n",
     "import cv2\n",
     "\n",
+    "coordinates = []\n",
     "image = cv2.imread('images/hello.jpg')\n",
     "gray = cv2.cvtColor(image,cv2.COLOR_BGR2GRAY)\n",
     "edged = cv2.Canny(gray, 30, 200)\n",
@@ -115,10 +108,45 @@
     "_, contours, hierarchy = cv2.findContours(edged, cv2.RETR_EXTERNAL, cv2.CHAIN_APPROX_SIMPLE)\n",
     "\n",
     "print(contours)\n",
+    "i=0\n",
+    "for c in contours:\n",
+    "    #c = max(cnt, key=cv2.contourArea)\n",
+    "    i+=1\n",
+    "    print(i)\n",
+    "    \n",
+    "    approx = cv2.approxPolyDP(c, 0.01*cv2.arcLength(c,True),True)\n",
+    "    if len(approx) == 4:  \n",
+    "        x,y,w,h = cv2.boundingRect(c)\n",
+    "        coordinates = [(x,y),(x+w,y),(x+w,y+h),(x,y+h)]\n",
+    "\n",
+    "\n",
+    "        extLeft = tuple(c[c[:, :, 0].argmin()][0])\n",
+    "        extRight = tuple(c[c[:, :, 0].argmax()][0])\n",
+    "        extTop = tuple(c[c[:, :, 1].argmin()][0])\n",
+    "        extBot = tuple(c[c[:, :, 1].argmax()][0])\n",
+    "\n",
+    "        cv2.drawContours(image, [c], 0, (0, 0, 255), 10)\n",
+    "        cv2.circle(image, extLeft, 8, (255, 255, 255), -1)\n",
+    "        cv2.circle(image, extRight, 8, (255, 255, 255), -1)\n",
+    "        cv2.circle(image, extTop, 8, (255, 255, 255), -1)\n",
+    "        cv2.circle(image, extBot, 8, (255, 255, 255), -1)\n",
+    "\n",
+    "\n",
+    "cv2.imshow('Contours', image)\n",
+    "cv2.waitKey(0)\n",
+    "cv2.destroyAllWindows()\n",
+    "\n",
     "\n",
     "#https://bretahajek.com/2017/01/scanning-documents-photos-opencv/\n",
     "#https://www.pyimagesearch.com/2014/08/25/4-point-opencv-getperspective-transform-example/"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
@@ -126,18 +154,6 @@
    "display_name": "Python 3",
    "language": "python",
    "name": "python3"
-  },
-  "language_info": {
-   "codemirror_mode": {
-    "name": "ipython",
-    "version": 3
-   },
-   "file_extension": ".py",
-   "mimetype": "text/x-python",
-   "name": "python",
-   "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython3",
-   "version": "3.6.6"
   }
  },
  "nbformat": 4,
